Image paths fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UNDP Digital Good</title>
 
-  <link rel="icon" href="img/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css" />
   <link rel="stylesheet" href="app.css" />
@@ -27,7 +27,7 @@
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-42.png"></a></h1>
+          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-42px.png"></a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
       </ul>
