--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <div class="contain-to-grid sticky">
-    <nav class="top-bar" data-topbar role="navigation">
+    <nav class="top-bar" data-topbar role="navigation" data-options="scrolltop:false;">
       <ul class="title-area">
         <li class="name">
           <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-42px.png"></a></h1>
@@ -132,6 +132,7 @@
   </footer>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/vendor/fastclick.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.3.2/parallax.min.js"></script>
   <script>
