Fix Hero styling Add navigation in Learn sections

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 
 <body>
 
-  <header class="hero">
-
-    <p>Join millions of Digital Good members and support the Global Goals for Sustainable Development. <a href="#learn">Learn</a> and <a href="#do">Do</a>. <a href="#give">Give</a>.</p>
-    <p><a href="" class="large button">Support Digital Good. Donate Today.</a></p>
-
+  <header class="hero" data-interchange="[images/hero-background.jpg, (default)]">
+    <div class="row text-center valign-middle">
+      <div class="large-12 columns">
+        <p>Join millions of Digital Good members and support the Global Goals for Sustainable Development. <a href="#learn">Learn</a> and <a href="#do">Do</a>. <a href="#give">Give</a>.</p>
+         <a href="" class="large button alert">Support Digital Good. Donate Today.</a>
+     </div>
+    </div>
   </header>
 
   <div class="contain-to-grid sticky">
     <nav class="top-bar" data-topbar role="navigation" data-options="scrolltop:false;">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-42px.png"></a></h1>
+          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-42px.png" alt="Digital Good logo"></a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
       </ul>
@@ -58,6 +60,13 @@
         <p>To make sure we have a positive impact - and an impact that lasts.</p>
       </div>
     </div>
+    <div class="row">
+      <ul class="small-block-grid-3 text-center">
+        <li><a href="#learn" class="button disabled">Development lasts</a></li>
+        <li><a href="#learn." class="button">Development sows Democracy</a></li>
+        <li><a href="#learn.." class="button">Development prevents Crisis</a></li>
+      </ul>
+    </div>
   </div>
 
   <div class="parallax-window" data-parallax="scroll" data-image-src="images/background-learn-1.jpg"></div>
@@ -74,6 +83,13 @@
 
         <p>So in 2014, we registered 18 million new voters and supported 15 national elections. Because we want youto be in charge of your own life and choices.</p>
       </div>
+    </div>
+    <div class="row">
+      <ul class="small-block-grid-3 text-center">
+        <li><a href="#learn" class="button">Development lasts</a></li>
+        <li><a href="#learn." class="button disabled">Development sows Democracy</a></li>
+        <li><a href="#learn.." class="button">Development prevents Crisis</a></li>
+      </ul>
     </div>
   </div>
 
@@ -92,6 +108,13 @@
         <p>That's why we run climate change projects in 140 countries. It's why we supported advanced solar systems in isolated desert towns in Morocco.</p>
         <p>To ensure that we take care of our planet, and of the generations of the future.</p>
       </div>
+    </div>
+    <div class="row">
+      <ul class="small-block-grid-3 text-center">
+        <li><a href="#learn" class="button">Development lasts</a></li>
+        <li><a href="#learn." class="button">Development sows Democracy</a></li>
+        <li><a href="#learn.." class="button disabled">Development prevents Crisis</a></li>
+      </ul>
     </div>
   </div>
   
@@ -118,7 +141,7 @@
         <h1>Give.</h1>
         <p>Digital Good supports the work of the United Nations Development Programme. UNDP is on the ground in more than 170 countries to eradicate poverty, fight inequalities and end exclusion. What does that mean? See the results we achieved, with your help, last year: <a href="http://infocus.undp.org/">http://infocus.undp.org/</a>.  </p>
         <p>With the new Global Goals, the world is starting an exciting new journey to sustainable development. We would love to have you join us. Become a Digital Good donor today, and join a community of millions that make real change possible, through the work of UNDP. With your support, we can reach the Goals.</p>
-        <p><a href="" class="large button">Support Digital Good. Donate Today.</a></p>
+        <p class="text-center"><a href="" class="large button alert">Support Digital Good. Donate Today.</a></p>
       </div>
     </div>
   </div>
