--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row text-center valign-middle">
       <div class="large-12 columns">
         <p>Join millions of Digital Good members and support the Global Goals for Sustainable Development. <a href="#learn">Learn</a> and <a href="#do">Do</a>. <a href="#give">Give</a>.</p>
-         <a href="" class="large button alert">Support Digital Good. Donate Today.</a>
+         <a href="http://bit.ly/digitalgoodevent" class="large button alert">Support Digital Good. Donate Today.</a>
      </div>
     </div>
   </header>
@@ -141,7 +141,7 @@
         <h1>Give.</h1>
         <p>Digital Good supports the work of the United Nations Development Programme. UNDP is on the ground in more than 170 countries to eradicate poverty, fight inequalities and end exclusion. What does that mean? See the results we achieved, with your help, last year: <a href="http://infocus.undp.org/">http://infocus.undp.org/</a>.  </p>
         <p>With the new Global Goals, the world is starting an exciting new journey to sustainable development. We would love to have you join us. Become a Digital Good donor today, and join a community of millions that make real change possible, through the work of UNDP. With your support, we can reach the Goals.</p>
-        <p class="text-center"><a href="" class="large button alert">Support Digital Good. Donate Today.</a></p>
+        <p class="text-center"><a href="http://bit.ly/digitalgoodevent" class="large button alert">Support Digital Good. Donate Today.</a></p>
       </div>
     </div>
   </div>
