--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+  
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-61266442-2', 'auto');
+    ga('send', 'pageview');
+  </script>  
 
   <header class="hero" data-interchange="[images/hero-background.jpg, (default)]">
     <div class="row text-center valign-middle">
@@ -29,7 +38,7 @@
     <nav class="top-bar" data-topbar role="navigation" data-options="scrolltop:false;">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-42px.png" alt="Digital Good logo"></a></h1>
+          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-36px.png" alt="Digital Good logo"></a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
       </ul>
@@ -139,7 +148,7 @@
     <div class="row">
       <div class="large-12 columns">
         <h1>Give.</h1>
-        <p>Digital Good supports the work of the United Nations Development Programme. UNDP is on the ground in more than 170 countries to eradicate poverty, fight inequalities and end exclusion. What does that mean? See the results we achieved, with your help, last year: <a href="http://infocus.undp.org/">http://infocus.undp.org/</a>.  </p>
+        <p>Digital Good supports the work of the United Nations Development Programme. UNDP is on the ground in more than 170 countries to eradicate poverty, fight inequalities and end exclusion. What does that mean? See the <a href="http://infocus.undp.org/">results we achieved</a>, with your help, last year.  </p>
         <p>With the new Global Goals, the world is starting an exciting new journey to sustainable development. We would love to have you join us. Become a Digital Good donor today, and join a community of millions that make real change possible, through the work of UNDP. With your support, we can reach the Goals.</p>
         <p class="text-center"><a href="http://bit.ly/digitalgoodevent" class="large button alert">Support Digital Good. Donate Today.</a></p>
       </div>
@@ -150,7 +159,7 @@
   
   <footer>
     <div class="row">
-    <p>Digital Good is powered by the <a href="http://www.undp.org">United Nations Development Programme.</a></p>
+      <p>Digital Good is powered by the <a href="http://www.undp.org">United Nations Development Programme.</a></p>
     </div>
   </footer>
   
