--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
       </div>
     </div>
     <div class="row">
-      <ul class="small-block-grid-3 text-center">
-        <li><a href="#learn" class="button disabled">Development lasts</a></li>
-        <li><a href="#learn." class="button">Development sows Democracy</a></li>
-        <li><a href="#learn.." class="button">Development prevents Crisis</a></li>
-      </ul>
+      <div class="large-4 columns"><a href="#learn" class="button expand disabled">Development lasts</a></div>
+      <div class="large-4 columns"><a href="#learn." class="button expand">Development sows Democracy</a></div>
+      <div class="large-4 columns"><a href="#learn.." class="button expand">Development prevents Crisis</a></div>
     </div>
   </div>
 
@@ -94,12 +92,10 @@
       </div>
     </div>
     <div class="row">
-      <ul class="small-block-grid-3 text-center">
-        <li><a href="#learn" class="button">Development lasts</a></li>
-        <li><a href="#learn." class="button disabled">Development sows Democracy</a></li>
-        <li><a href="#learn.." class="button">Development prevents Crisis</a></li>
-      </ul>
-    </div>
+      <div class="large-4 columns"><a href="#learn" class="button expand">Development lasts</a></div>
+      <div class="large-4 columns"><a href="#learn." class="button expand disabled">Development sows Democracy</a></div>
+      <div class="large-4 columns"><a href="#learn.." class="button expand">Development prevents Crisis</a></div>
+     </div>
   </div>
 
   <div class="parallax-window" data-parallax="scroll" data-image-src="images/background-learn-2.jpg"></div>
@@ -119,11 +115,9 @@
       </div>
     </div>
     <div class="row">
-      <ul class="small-block-grid-3 text-center">
-        <li><a href="#learn" class="button">Development lasts</a></li>
-        <li><a href="#learn." class="button">Development sows Democracy</a></li>
-        <li><a href="#learn.." class="button disabled">Development prevents Crisis</a></li>
-      </ul>
+      <div class="large-4 columns"><a href="#learn" class="button expand">Development lasts</a></div>
+      <div class="large-4 columns"><a href="#learn." class="button expand">Development sows Democracy</a></div>
+      <div class="large-4 columns"><a href="#learn.." class="button expand disabled">Development prevents Crisis</a></div>
     </div>
   </div>
   
@@ -157,9 +151,11 @@
   
   <div class="parallax-window" data-parallax="scroll" data-image-src="images/background-give.jpg"></div>
   
-  <footer>
+  <footer class="full-row">
     <div class="row">
-      <p>Digital Good is powered by the <a href="http://www.undp.org">United Nations Development Programme.</a></p>
+      <div class="large-12 columns">
+        <p>Digital Good is powered by the <a href="http://www.undp.org">United Nations Development Programme.</a></p>
+      </div>
     </div>
   </footer>
   
@@ -167,6 +163,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/vendor/fastclick.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.3.2/parallax.min.js"></script>
+  
   <script>
     $(document).foundation();
   </script>
