--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
   
+  <a name="home"></a>
+  
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -38,7 +40,7 @@
     <nav class="top-bar" data-topbar role="navigation" data-options="scrolltop:false;">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#" title="Home"><img src="images/undp-digital-good-logo-36px.png" alt="Digital Good logo"></a></h1>
+          <h1><a href="#home" title="Home" class="scroll"><img src="images/undp-digital-good-logo-36px.png" alt="Digital Good logo"></a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
       </ul>
@@ -46,9 +48,9 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right ">
-          <li><a href="#learn">Learn</a></li>
-          <li><a href="#do">Do</a></li>
-          <li><a href="#give">Give</a></li>
+          <li><a href="#learn" class="scroll">Learn</a></li>
+          <li><a href="#do" class="scroll">Do</a></li>
+          <li><a href="#give" class="scroll">Give</a></li>
         </ul>
       </section>
     </nav>
@@ -71,8 +73,8 @@
     </div>
     <div class="row">
       <div class="large-4 columns"><a href="#learn" class="button expand disabled">Development lasts</a></div>
-      <div class="large-4 columns"><a href="#learn." class="button expand">Development sows Democracy</a></div>
-      <div class="large-4 columns"><a href="#learn.." class="button expand">Development prevents Crisis</a></div>
+      <div class="large-4 columns"><a href="#learn." class="button expand scroll">Development sows Democracy</a></div>
+      <div class="large-4 columns"><a href="#learn.." class="button expand scroll">Development prevents Crisis</a></div>
     </div>
   </div>
 
@@ -92,9 +94,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="large-4 columns"><a href="#learn" class="button expand">Development lasts</a></div>
+      <div class="large-4 columns"><a href="#learn" class="button expand scroll">Development lasts</a></div>
       <div class="large-4 columns"><a href="#learn." class="button expand disabled">Development sows Democracy</a></div>
-      <div class="large-4 columns"><a href="#learn.." class="button expand">Development prevents Crisis</a></div>
+      <div class="large-4 columns"><a href="#learn.." class="button expand scroll">Development prevents Crisis</a></div>
      </div>
   </div>
 
@@ -115,8 +117,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="large-4 columns"><a href="#learn" class="button expand">Development lasts</a></div>
-      <div class="large-4 columns"><a href="#learn." class="button expand">Development sows Democracy</a></div>
+      <div class="large-4 columns"><a href="#learn" class="button expand scroll">Development lasts</a></div>
+      <div class="large-4 columns"><a href="#learn." class="button expand scroll">Development sows Democracy</a></div>
       <div class="large-4 columns"><a href="#learn.." class="button expand disabled">Development prevents Crisis</a></div>
     </div>
   </div>
@@ -166,6 +168,12 @@
   
   <script>
     $(document).foundation();
+    $('.scroll').on('click', function(e) {
+      e.preventDefault();
+      $('html, body').animate({
+        scrollTop: $('[name="' + $(this).attr('href').substr(1) + '"]').offset().top
+      }, 300);
+    });
   </script>
 </body>
 
