Cosmetic fixes and text update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header class="hero" data-interchange="[images/hero-background.jpg, (default)]">
     <div class="row text-center valign-middle">
       <div class="large-12 columns">
-        <p>Join millions of Digital Good members and support the Global Goals for Sustainable Development. <a href="#learn" class="scroll">Learn</a> and <a href="#do" class="scroll">Do</a>. <a href="#give" class="scroll">Give</a>.</p>
+        <p>Join millions of Digital Good members and support the Sustainable Development Goals. <a href="#learn" class="scroll">Learn</a> and <a href="#do" class="scroll">Do</a>. <a href="#give" class="scroll">Give</a>.</p>
          <a href="http://bit.ly/digitalgoodevent" class="large button alert">Support Digital Good. Donate Today.</a>
      </div>
     </div>
