--- a/index.html
+++ b/index.html
@@ -63,11 +63,8 @@
         <h1>Learn.</h1>
         <h3>Development lasts</h3>
         <p>After an earthquake, you rebuild your house. But to prepare for future shocks, you should think about building back your house better - right?</p>
-
         <p>That's what Sustainable Development means: not just improving a society, but making improvements that last.</p>
-
         <p>That's why we created nearly 1 million jobs in low-income communities last year alone, 41% for women. It's why we helped 1.4 million people living with HIV to get antiviral medication.</p>
-
         <p>To make sure we have a positive impact - and an impact that lasts.</p>
       </div>
     </div>
@@ -87,9 +84,7 @@
         <h3>Development sows Democracy</h3>
         <p>Development reaps Peace</p>
         <p>Where you work. Who you love. How you spend your life. As much as possible, you want to be in charge of the choices that affect you.</p>
-
         <p>This belief is at the root of democracy and it is the main reason it supports peace: people will choose peaceful ways of affecting important decisions over violent ones.</p>
-
         <p>So in 2014, we registered 18 million new voters and supported 15 national elections. Because we want youto be in charge of your own life and choices.</p>
       </div>
     </div>
@@ -109,10 +104,8 @@
         <h3>Development prevents Crisis</h3>
         <p>Development speeds Recovery</p>
         <p>Climate change is one of the biggest challenges of our time - especially for developing countries.</p>
-
         <p>Imagine cyclones destroying the farmland you use for food, year after year. Or unpredictable droughts making it impossible to know when to plant.</p>
-
-        <p>That's why we run climate change projects in 140 countries. It's why we supported advanced solar systems in isolated desert towns in Morocco.</p>
+        <p>That's why we run climate change projects in 140 countries. It's why we supported communities to adopt advanced solar systems in various isolated drylands areas.</p>
         <p>To ensure that we take care of our planet, and of the generations of the future.</p>
       </div>
     </div>
@@ -132,7 +125,6 @@
         <h1>Do.</h1>
         <p>To reach the Global Goals we need real action. </p>
         <p>Government leaders will take the first step on September 25 by adopting the Goals, but that's just the beginning. We need to tell everyone  - here's <a href="http://www.globalgoals.org/tell-everyone/">how</a>. We need everyone to keep reminding their leaders. And we need to all do our very best to directly act on the Goals as well – here's a <a href="http://www.globalgoals.org/take-action/">few more things you can do</a>.</p>
-
       </div>
     </div>
   </div>
