--- a/api.html
+++ b/api.html
@@ -25,7 +25,7 @@
       $.ajax({
         accepts: 'application/json',
         cache: false,
-        contentType: 'application/json'
+        contentType: 'application/json',
         url: "https://app.mobilecause.com/api/v2/reports/transactions.json?",
         headers: {
           'Authorization': 'Token token="D7nS2Cdp3DU4zpXC1SVA"'
