--- a/api.html
+++ b/api.html
@@ -6,38 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Digital Good API test</title>
 
-  <link rel="icon" href="favicon.ico">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css" />
- 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/vendor/fastclick.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.min.js"></script>
-  
   <script>
-    $(document).foundation();
     $(function(){
       $.ajax({
         accepts: 'application/json',
         cache: false,
         contentType: 'application/json',
         url: "https://app.mobilecause.com/api/v2/reports/transactions.json?",
-        headers: {
-          'Authorization': 'Token token="D7nS2Cdp3DU4zpXC1SVA"'
+        beforeSend: function(xhr) {
+          xhr.setRequestHeader("Authorization", "Token token=\"D7nS2Cdp3DU4zpXC1SVA\"");
+        },
+        xhrFields: {
+          withCredentials: true
         },
         data: {
           status: 'collected',
           keyword: 'digitalgood'
         },
-        dataType: 'json',
-        xhrFields: {
-          withCredentials: true
-        }
+        dataType: 'json'
+      }).done(function(data){
+        console.log(data);
       });
     });
   </script>
